@@ -2,6 +2,8 @@ DarkIce next release
 
     o ported to FreeBSD (removed reference to MSG_NOSIGNAL in TcpSocket.cpp)
     o bug fix: maximum bitrate setting fixed for Ogg Vorbis streams
+    o changed internals so that now each encoding/server connection is
+      a separate thread
 
 20-08-2002: DarkIce 0.11 released
 
